--- a/self_attention_with_trianable_weights.ipynb
+++ b/self_attention_with_trianable_weights.ipynb
@@ -97,7 +97,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "b0aQ8-YSY0X3",
-        "outputId": "a9ce3292-ae25-4d98-f255-afa64a5e5176"
+        "outputId": "bd41194d-8fe4-47cb-c48e-d705a12dc9f1"
       },
       "execution_count": 5,
       "outputs": [
@@ -126,7 +126,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "3AlUMQ64Y2tl",
-        "outputId": "ed4272f9-ba80-460a-9486-ba3f8b7627a4"
+        "outputId": "b2d8c916-c69f-4a93-bada-54f226f5c516"
       },
       "execution_count": 6,
       "outputs": [
@@ -153,7 +153,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "3NiF2T5VY41s",
-        "outputId": "3b7bc696-cdc1-4bae-e2fb-5c5f68d75f49"
+        "outputId": "71bbb63f-f16c-4a4f-edb1-78bc8a314125"
       },
       "execution_count": 7,
       "outputs": [
@@ -177,7 +177,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "mTNOBXIvY6zm",
-        "outputId": "0fc3e5d0-c335-4d4c-8708-dd089d966666"
+        "outputId": "862c4ea5-6bef-48e2-ff41-7964e383ea66"
       },
       "execution_count": 8,
       "outputs": [
@@ -201,7 +201,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Erg4HsMEY-ZL",
-        "outputId": "404426ed-a740-4e52-af13-6660199b79f3"
+        "outputId": "dbd9b1bd-2a08-4372-a931-cd621e0be118"
       },
       "execution_count": 9,
       "outputs": [
@@ -237,7 +237,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "KHGkVaSDY_zL",
-        "outputId": "becf0f62-2119-4309-a99e-77a151e513a8"
+        "outputId": "50a0045c-69e4-4d5a-c65d-a61f05175bef"
       },
       "execution_count": 10,
       "outputs": [
@@ -262,7 +262,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "8y2HLb18ZBk3",
-        "outputId": "ced7e2c8-d633-40a5-d8c0-db4b83bb6ebe"
+        "outputId": "e679f154-4a72-494c-cad3-f756393cec4c"
       },
       "execution_count": 11,
       "outputs": [
@@ -292,7 +292,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "759RSUHGZDWg",
-        "outputId": "958038dc-273c-4310-ac6e-9214a39e2c04"
+        "outputId": "42544d37-9a16-4ebe-9c54-7eec17953f31"
       },
       "execution_count": 12,
       "outputs": [
@@ -378,11 +378,11 @@
         "print(output)"
       ],
       "metadata": {
-        "id": "x91dzrKuZOgv",
-        "outputId": "96cf8b15-6c2d-4c7a-f64e-ee68acd39c51",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "x91dzrKuZOgv",
+        "outputId": "7e8fb538-8b15-4935-dc70-a40163f6c331"
       },
       "execution_count": 15,
       "outputs": [
@@ -402,9 +402,381 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "queries = sa.W_query(inputs)\n",
+        "keys = sa.W_key(inputs)\n",
+        "\n",
+        "attn_scores = queries @ keys.T\n",
+        "attn_weights = torch.softmax(attn_scores / keys.shape[-1]**0.5, dim=1)\n",
+        "\n",
+        "print(attn_weights)"
+      ],
+      "metadata": {
+        "id": "vhzDtNw9ZRFc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "a43ab720-c9e2-4639-f303-b36e10ce6b37"
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor([[0.1767, 0.1661, 0.1764, 0.1692, 0.1582, 0.1535],\n",
+            "        [0.1798, 0.1657, 0.1796, 0.1697, 0.1555, 0.1496],\n",
+            "        [0.1793, 0.1648, 0.1816, 0.1682, 0.1554, 0.1508],\n",
+            "        [0.1818, 0.1655, 0.1819, 0.1700, 0.1538, 0.1472],\n",
+            "        [0.1827, 0.1649, 0.1839, 0.1695, 0.1527, 0.1463],\n",
+            "        [0.1841, 0.1641, 0.1869, 0.1689, 0.1512, 0.1449]],\n",
+            "       grad_fn=<SoftmaxBackward0>)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "context_length = attn_scores.shape[0]\n",
+        "\n",
+        "mask_simple = torch.tril(\n",
+        "    torch.ones(context_length, context_length)\n",
+        ")\n",
+        "\n",
+        "print(mask_simple)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "PtYhduD5UhYp",
+        "outputId": "dca9b643-46b7-4ee9-9851-e892a3e73dfa"
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor([[1., 0., 0., 0., 0., 0.],\n",
+            "        [1., 1., 0., 0., 0., 0.],\n",
+            "        [1., 1., 1., 0., 0., 0.],\n",
+            "        [1., 1., 1., 1., 0., 0.],\n",
+            "        [1., 1., 1., 1., 1., 0.],\n",
+            "        [1., 1., 1., 1., 1., 1.]])\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "masked_simple = attn_weights * mask_simple\n",
+        "print(masked_simple)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "V8oH9mgpUuoe",
+        "outputId": "8ac1ba00-4f91-4f67-faf4-a97e3b52b65e"
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor([[0.1767, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
+            "        [0.1798, 0.1657, 0.0000, 0.0000, 0.0000, 0.0000],\n",
+            "        [0.1793, 0.1648, 0.1816, 0.0000, 0.0000, 0.0000],\n",
+            "        [0.1818, 0.1655, 0.1819, 0.1700, 0.0000, 0.0000],\n",
+            "        [0.1827, 0.1649, 0.1839, 0.1695, 0.1527, 0.0000],\n",
+            "        [0.1841, 0.1641, 0.1869, 0.1689, 0.1512, 0.1449]],\n",
+            "       grad_fn=<MulBackward0>)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "row_sums = masked_simple.sum(dim=1, keepdim=True)\n",
+        "masked_simple_norm = masked_simple / row_sums\n",
+        "\n",
+        "print(masked_simple_norm)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Oia1Sh3VVH-f",
+        "outputId": "57f046e8-d9e4-4e3b-ee1e-1b913bcae39a"
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor([[1.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
+            "        [0.5203, 0.4797, 0.0000, 0.0000, 0.0000, 0.0000],\n",
+            "        [0.3411, 0.3135, 0.3454, 0.0000, 0.0000, 0.0000],\n",
+            "        [0.2601, 0.2367, 0.2601, 0.2431, 0.0000, 0.0000],\n",
+            "        [0.2140, 0.1931, 0.2154, 0.1985, 0.1789, 0.0000],\n",
+            "        [0.1841, 0.1641, 0.1869, 0.1689, 0.1512, 0.1449]],\n",
+            "       grad_fn=<DivBackward0>)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(attn_scores)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "78-jOeP5VQSY",
+        "outputId": "0af0a3fc-1360-4085-f620-55dca88a7bda"
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor([[ 0.0884,  0.0014,  0.0860,  0.0271, -0.0677, -0.1102],\n",
+            "        [ 0.1127, -0.0022,  0.1116,  0.0310, -0.0924, -0.1470],\n",
+            "        [ 0.0795, -0.0397,  0.0974, -0.0108, -0.1228, -0.1649],\n",
+            "        [ 0.1275, -0.0058,  0.1279,  0.0323, -0.1095, -0.1716],\n",
+            "        [ 0.1222, -0.0232,  0.1311,  0.0158, -0.1316, -0.1927],\n",
+            "        [ 0.1160, -0.0471,  0.1368, -0.0065, -0.1629, -0.2232]],\n",
+            "       grad_fn=<MmBackward0>)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "mask = torch.triu(\n",
+        "    torch.ones(context_length, context_length),\n",
+        "    diagonal=1\n",
+        ")\n",
+        "\n",
+        "print(mask)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "AmPnbADnVa6B",
+        "outputId": "9f21e70f-0fbc-4796-f792-9845c1ab1918"
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor([[0., 1., 1., 1., 1., 1.],\n",
+            "        [0., 0., 1., 1., 1., 1.],\n",
+            "        [0., 0., 0., 1., 1., 1.],\n",
+            "        [0., 0., 0., 0., 1., 1.],\n",
+            "        [0., 0., 0., 0., 0., 1.],\n",
+            "        [0., 0., 0., 0., 0., 0.]])\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "attn_scores = attn_scores/(2**(0.5))"
+      ],
+      "metadata": {
+        "id": "n6KXPmQCXW_K"
+      },
+      "execution_count": 28,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "masked = attn_scores.masked_fill(mask.bool(), -torch.inf)\n",
+        "print(masked)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "tro-TCdSW8g4",
+        "outputId": "703650db-74f0-46ac-b9a4-635a3cda68b7"
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor([[ 0.0442,    -inf,    -inf,    -inf,    -inf,    -inf],\n",
+            "        [ 0.0564, -0.0011,    -inf,    -inf,    -inf,    -inf],\n",
+            "        [ 0.0398, -0.0198,  0.0487,    -inf,    -inf,    -inf],\n",
+            "        [ 0.0637, -0.0029,  0.0639,  0.0161,    -inf,    -inf],\n",
+            "        [ 0.0611, -0.0116,  0.0656,  0.0079, -0.0658,    -inf],\n",
+            "        [ 0.0580, -0.0235,  0.0684, -0.0032, -0.0814, -0.1116]],\n",
+            "       grad_fn=<MaskedFillBackward0>)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "attn_weights = torch.softmax(\n",
+        "    masked,\n",
+        "    dim=-1\n",
+        ")"
+      ],
+      "metadata": {
+        "id": "67KAf5egXEBr"
+      },
+      "execution_count": 32,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "attn_weights"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "RI-cg4xsXofe",
+        "outputId": "13b4d750-f70f-43db-da8a-29b197e39f0c"
+      },
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[1.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
+              "        [0.5144, 0.4856, 0.0000, 0.0000, 0.0000, 0.0000],\n",
+              "        [0.3389, 0.3193, 0.3419, 0.0000, 0.0000, 0.0000],\n",
+              "        [0.2571, 0.2405, 0.2572, 0.2452, 0.0000, 0.0000],\n",
+              "        [0.2099, 0.1952, 0.2109, 0.1991, 0.1849, 0.0000],\n",
+              "        [0.1790, 0.1650, 0.1809, 0.1684, 0.1557, 0.1511]],\n",
+              "       grad_fn=<SoftmaxBackward0>)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 33
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "example = torch.ones(6, 6)\n",
+        "print(example)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Hd5DzZ5TXppd",
+        "outputId": "ada9d5bc-ad7e-4a29-a756-50cddce88d26"
+      },
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor([[1., 1., 1., 1., 1., 1.],\n",
+            "        [1., 1., 1., 1., 1., 1.],\n",
+            "        [1., 1., 1., 1., 1., 1.],\n",
+            "        [1., 1., 1., 1., 1., 1.],\n",
+            "        [1., 1., 1., 1., 1., 1.],\n",
+            "        [1., 1., 1., 1., 1., 1.]])\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "torch.manual_seed(123)\n",
+        "\n",
+        "dropout = torch.nn.Dropout(0.5)\n",
+        "example = torch.ones(6, 6)\n",
+        "\n",
+        "print(dropout(example))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "HJaVJUUrZy_K",
+        "outputId": "96fa4412-f975-4f90-aedb-da4108443bf3"
+      },
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor([[2., 2., 0., 2., 2., 0.],\n",
+            "        [0., 0., 0., 2., 0., 2.],\n",
+            "        [2., 2., 2., 2., 0., 2.],\n",
+            "        [0., 2., 2., 0., 0., 2.],\n",
+            "        [0., 2., 0., 2., 0., 2.],\n",
+            "        [0., 2., 2., 2., 2., 0.]])\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "torch.manual_seed(123)\n",
+        "print(dropout(attn_weights))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "CCS8VM8pZ5zc",
+        "outputId": "894e5cf0-ac70-41f8-dcef-2ec9bee7bed8"
+      },
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor([[2.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
+            "        [0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
+            "        [0.6777, 0.6385, 0.6838, 0.0000, 0.0000, 0.0000],\n",
+            "        [0.0000, 0.4811, 0.5143, 0.0000, 0.0000, 0.0000],\n",
+            "        [0.0000, 0.3904, 0.0000, 0.3981, 0.0000, 0.0000],\n",
+            "        [0.0000, 0.3300, 0.3617, 0.3367, 0.3114, 0.0000]],\n",
+            "       grad_fn=<MulBackward0>)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "vhzDtNw9ZRFc"
+        "id": "DA1ALC1jaELI"
       },
       "execution_count": null,
       "outputs": []
